fix text contrast

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -10,6 +10,7 @@
 
 	p {
 		color: #fff;
+		font-weight: 700;
 	}
 
 	.inner-hero {
